/*
 * $Id: ChangeLog,v 1.2556 2004/03/11 08:19:49 patrickmast Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-11 11:00 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/rtl/makefile
    ! added fparse.c

2004-03-11 09:16 UTC+0100 Patrick Mast <patrick@xHarbour.com>
  * dox/whatsnew.txt
    + Added 1st What's new for 0.93 ( text from Andi Jahja )

2004-03-10 20:29 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapigt.h
    + Added extern void hb_inkeyExit( void )
  * source/rtl/inkey.c
    + Added logic to LOCK/UNLOCK static variables holding BLOCK values.
    + Added void hb_inkeyExit( void ) to UNLOCL and release BLOCK values in static variables.
    % Cleanup of redundant code.

  * source/vm/hvm.c
    + Added call to hb_inkeyExit() in hb_vmQuit()

2004-03-10 18:38 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/inkey.c
    ! Fixed initialziation of s_inKeyBlockBefore and s_inKeyBlockAfter to avoid GPF traps.

2004-03-11 08:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rdd/dbcmd.c
    ! DBF2TEXT() GPF when called w/o argument -> error trapper added.

2004-03-10 16:51 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
    ! Fixed few hb_retc() to hb_retcAdoptStatic()

  * source/vm/hvm.c
    ! Fixed memory leak od string items after Error conditions.

2004-03-10 15:29 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbcmd.c
    * Tried to fix som error messages in dbCreate, but we must re-design the whole hb_errRT_DBCMD()
      to allow for arguments to be passed. I left commented lines as a template for future.
    * Revised few incorrect Error Codes in dbCreate().
    * Formatting.

2004-03-11 05:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rdd/dbcmd.c
    % minor optimization on evaluation of FOR condition in DBF2TEXT()
